ProdIND/ProdPrograms/force-app/main/default/objects/Trade_Certificate_Fee_master__c/Trade_Certificate_Fee_master__c.object-meta.xml
<CustomObject>
    <label>Trade Certificate Fee Master</label>
    <nameField>
        <label>Trade_Certificate_Fee_master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Certificate Fee Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>