ProdIND/ProdPrograms/force-app/main/default/objects/Trade_Certificate_Fee_master__c/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active_Flag</label>
    <type>Checkbox</type>
</CustomField>