ProdIND/ProdPrograms/force-app/main/default/objects/Trade_Certificate_Fee_master__c/fields/Bl_Code__c.field-meta.xml
<CustomField>
    <fullName>Bl_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bl Code Details</label>
    <referenceTo>Bl_Code_Details__c</referenceTo>
    <relationshipLabel>Trade Certificate Fee Master</relationshipLabel>
    <relationshipName>Trade_Certificate_Fee_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>