ProdIND/ProdPrograms/force-app/main/default/objects/Trade_Certificate_Fee_master__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>