ProdIND/ProdPrograms/force-app/main/default/objects/Trade_Certificate_Fee_master__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Trade Certificate Fee Master</relationshipLabel>
    <relationshipName>Trade_Certificate_Fee_Master</relationshipName>
    <type>Lookup</type>
</CustomField>