ProdIND/ProdPrograms/force-app/main/default/objects/Trade_Certificate_Fee_master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Bl_Code__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Fee__c</columns>
    <columns>Active_Flag__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Unique_Identifier__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductCode__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>