ProdIND/ProdPrograms/force-app/main/default/objects/Trade_Certificate_Fee_master__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Bl_Code__c</columns>
    <columns>NAME</columns>
    <columns>Fee__c</columns>
    <columns>ProductCode__c</columns>
    <columns>Active_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>